New jar version

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -5,9 +5,9 @@ RUN apt-get update && apt-get install -y openjdk-8-jre && rm -rf /var/lib/apt/li
 RUN mkdir -p /var/books/preview/ /opt/bookserver/ebooks/
 VOLUME ["/var/books/preview/", "/opt/bookserver/ebooks/"]
 
-COPY maven/BookDownloadServer-0.1.jar /opt/bookserver
+COPY maven/BookDownloadServer-0.2.jar /opt/bookserver/BookDownloadServer.jar
 
 EXPOSE 8080
 
 WORKDIR /opt/bookserver
-CMD ["/usr/bin/java", "-jar", "-Dspring.profiles.active=docker", "BookDownloadServer-0.1.jar"]
+CMD ["/usr/bin/java", "-jar", "-Dspring.profiles.active=docker", "BookDownloadServer.jar"]
