--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,18 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>BookDownloadServer</groupId>
 	<artifactId>BookDownloadServer</artifactId>
-	<version>0.4</version>
+	<version>0.5</version>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.2</version>
+		<version>3.1.1</version>
 	</parent>
+
+  <name>BookDownladServer</name>
+  <properties>
+    <jakarta-servlet.version>5.0.0</jakarta-servlet.version>
+  </properties>
 
 	<repositories>
 		<repository>
@@ -120,5 +125,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<name>BookDownladServer</name>
 </project>
